<resources>
    <string name="app_name">Covid19</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="lista_cidades_fragment_label">First Fragment</string>
    <string name="menu_fragment_label">Second Fragment</string>


    <string name="cidades">Cidades</string>
    <string name="casos">Casos</string>
    <string name="foco_de_contagio">Foco de Contagio</string>
    <string name="todo">TODO</string>
    <string name="cidade">Cidade</string>
    <string name="novacidade">NovaCidade</string>
    <string name="alterarcidade">AlterarCidade</string>
    <string name="eliminarcidade">EliminarCidade</string>
    <string name="cidadee">Cidadee</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="versao">Cidade v. 1.0</string>
    <string name="cidade_obrigatoria">Preencha a cidade</string>
    <string name="erro_inserir_cidade">Erro ao inserir cidade</string>
    <string name="novo_caso">novo_caso</string>
    <string name="alterar_caso">alterar_caso</string>
    <string name="eliminar_caso">eliminar_caso</string>
    <string name="erro_alterar_cidade">Erro ao alterar cidade</string>
    <string name="erro_guardado_sucesso">Cidade guardada com sucesso</string>
    <string name="elimina_cidade_fragment_label">Eliminar_cidade?</string>
    <string name="erro_eliminar_cidade">Erro ao eliminar cidade</string>
    <string name="cidade_eliminada_sucesso">Cidade eliminada com sucesso</string>
    <string name="infetados">Infetados</string>
    <string name="ativos">Ativos</string>
    <string name="obitos">Obitos</string>
    <string name="data">Data</string>
    <string name="Guardar">Guardar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="novofococontagio">NovoFocoContagio</string>
    <string name="alterarfococontagio">AlterarFocoContagio</string>
    <string name="eliminarfococontagio">EliminarFocoContagio</string>
    <string name="infetados_obrigatorio">Preencha os infetados</string>
    <string name="ativos_obrigatorio">Preencha os ativos</string>
    <string name="obitos_obrigatorio">Preencha os obitos</string>
    <string name="data_obrigatoria">Data obrigatoria</string>

    <string name="Cidade">Cidade</string>
    <string name="local">Local</string>
    <string name="guardarfoco">GuardarFoco</string>
    <string name="cancelarfoco">CancelarFoco</string>
    <string name="local_obrigatorio">Preencha o local</string>
    <string name="erro_inserir_foco_contagio">Erro ao inserir foco contagio</string>
    <string name="erro_alterar_foco_contagio">Erro ao alterar foco contagio</string>
    <string name="foco_contagio_guardado_sucesso">Foco contagio guardado com sucesso</string>
    <string name="elimina_foco_contagio_fragment_label">Tem a certeza que quer eliminar?</string>
    <string name="eliminar_foco">eliminar</string>
    <string name="erro_eliminar_foco_contagio">Erro ao eliminar foco contagio</string>
    <string name="foco_contagio_eliminado_sucesso">Foco contagio eliminado com sucesso</string>
    <string name="textview">TextView</string>
    <string name="hint">hint</string>
    <string name="erro_inserir_caso">Erro ao inserir caso</string>
    <string name="erro_alterar_caso">Erro ao alterar caso</string>
    <string name="caso_guardado_sucesso">Caso guardado com sucesso</string>
    <string name="elimina_caso_fragment_label">Eliminar Caso?</string>
    <string name="erro_eliminar_caso">Erro ao eliminar caso</string>
    <string name="caso_eliminado_sucesso">Caso eliminado sucesso</string>


</resources>