<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.covid19.MainActivity">
    <item
        android:id="@+id/action_novo_cidade"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/novacidade"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alterar_cidade"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/alterarcidade"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar_cidade"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/eliminarcidade"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>