<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cidade"
        android:layout_width="201dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/cidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_second" />

    <Button
        android:id="@+id/button_casos"
        android:layout_width="204dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/casos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cidade" />

    <Button
        android:id="@+id/button_foco_contagio"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/foco_de_contagio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_casos" />

    <ImageView
        android:id="@+id/covid"
        android:layout_width="159dp"
        android:layout_height="140dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/_115033545_gettyimages_1226314512"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_foco_contagio" />

</androidx.constraintlayout.widget.ConstraintLayout>