<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EliminaCasoFragment" >

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_ecran"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/Cidade"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_destaque" />

    <TextView
        android:id="@+id/textViewCidadeCa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="Lisboa" />
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/infetados"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_destaque" />

    <TextView
        android:id="@+id/textViewInfetadosC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="3415" />
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/ativos"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_destaque" />

    <TextView
        android:id="@+id/textViewAtivosC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="60" />
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/obitos"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_destaque" />

    <TextView
        android:id="@+id/textViewObitosC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="53" />
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/data"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_destaque" />

    <TextView
        android:id="@+id/textViewDataC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        tools:text="2020, 5, 20" />
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</LinearLayout>